--- a/pom.xml
+++ b/pom.xml
@@ -90,16 +90,16 @@
                 <version>${org.mapstruct.version}</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
-                <groupId>com.github.binarywang</groupId>
-                <artifactId>weixin-java-pay</artifactId>
-                <version>3.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.binarywang</groupId>
-                <artifactId>weixin-java-miniapp</artifactId>
-                <version>3.2.0</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.github.binarywang</groupId>-->
+<!--                <artifactId>weixin-java-pay</artifactId>-->
+<!--                <version>3.2.0</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>com.github.binarywang</groupId>-->
+<!--                <artifactId>weixin-java-miniapp</artifactId>-->
+<!--                <version>3.2.0</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
