--- a/fisher-gateway/pom.xml
+++ b/fisher-gateway/pom.xml
@@ -11,7 +11,9 @@
 
     <groupId>com.fisher.gateway</groupId>
     <artifactId>fisher-gateway</artifactId>
-
+    <properties>
+        <skipTests>true</skipTests>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.fisher.common</groupId>
